# lidarbot

./: .dockerignore  Dockerfile  README.md
.github/workflows/: docker-build.yml  lidarbot_ci_action.yml
docker/: entrypoint.sh
lidarbot_base/: CMakeLists.txt
lidarbot_base/include/lidarbot_base/: esp32_bridge.h
lidarbot_base/src/: MotorDriver.c  esp32_bridge.c  motor_encoder.c
lidarbot_bringup/config/: controllers.yaml
lidarbot_bringup/include/lidarbot_bringup/: mpu6050_lib.h
lidarbot_bringup/launch/: camera_launch.py  lidarbot_bringup_launch.py  rplidar_launch.py
lidarbot_description/urdf/: ros2_control.xacro
lidarbot_gazebo/: package.xml
lidarbot_gz/config/: lidarbot_bridge.yaml
lidarbot_gz/launch/: gz_launch.py
lidarbot_gz/urdf/: sensors.xacro
lidarbot_navigation/config/: ekf.yaml
lidarbot_navigation/rviz/: lidarbot_nav.rviz
lidarbot_slam/config/: mapper_params_online_async.yaml
